# speaker_recognition

./: .gitignore  Dockerfile  README.md  REPORT.md  infer.py  pyproject.toml  requirements.txt
configs/: train_campplus.yaml  train_campplus_chunk5.yaml  train_campplus_stage2.yaml  train_campplus_stage3.yaml  train_ecapa.yaml  train_ecapa_stage2.yaml  train_ecapa_stage3.yaml  train_ecapa_v2.yaml  train_eres2net.yaml  train_eres2net_chunk5.yaml  train_eres2net_stage2.yaml  train_eres2net_stage3.yaml  train_eres2netv2_stage1.yaml  train_eres2netv2_stage2.yaml  train_eres2netv2_stage3.yaml  train_wavlm_stage1.yaml  train_wavlm_stage2.yaml  train_wavlm_stage3.yaml
eda/: eda.ipynb  requirements.txt
results/: experiments.jsonl
scripts/: extract_archives.sh  run.sh  run_baseline.py  run_campplus.py  run_campplus_ft_infer.py  run_ecapa2.py  run_ensemble.py  run_eval.py  run_inference_torch.py  run_pretrained.py  run_rerank.py  run_train.py  run_train_campplus.py  run_train_eres2net.py  run_train_eres2netv2.py  run_train_wavlm.py  run_tta_infer.py
src/inference/: extract_embeddings.py
src/models/: campplus_wrapper.py  ecapa_tdnn.py  eres2net_wrapper.py  eres2netv2_wrapper.py  loss.py  onnx_wrapper.py  wavlm_wrapper.py
src/retrieval/: faiss_search.py  reranking.py
src/training/: trainer.py
src/utils/: audio.py  experiment_logger.py  metrics.py  submission.py
